Fix contrast ratio for navigation h3

--- a/wdn/templates_4.0/less/layouts/navigation.less
+++ b/wdn/templates_4.0/less/layouts/navigation.less
@@ -93,6 +93,10 @@
 
 #navigation {
 
+    h3 {
+        color: #fffdfd;
+    }
+
     a {
         padding: 5px 5%;
         .transition(height @nav-transition-duration ease);
